fix: overflow-x de la navegacion a scroll

--- a/assets/css/bloques/bloque-navscroll.scss
+++ b/assets/css/bloques/bloque-navscroll.scss
@@ -1,3 +1,9 @@
+.parent-nav {
+    @media all and (max-width: 900px){
+        overflow-x: scroll;
+    }
+}
+
 .navegacion_scroll {
     display: flex;
     margin: 0 auto;
